--- a/UserService/UserService.UnitTests/UserService.UnitTests.csproj
+++ b/UserService/UserService.UnitTests/UserService.UnitTests.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="../../UserService.Domain/UserService.Domain.csproj" />
     <ProjectReference Include="..\UserService.Domain\UserService.Domain.csproj" />
+    <ProjectReference Include="..\UserService.Infrastructure\UserService.Infrastructure.csproj" />
     <ProjectReference Include="..\UserService.Application\UserService.Application.csproj" />
   </ItemGroup>
 
