--- a/UserService/UserService.Infrastructure/UserService.Infrastructure.csproj
+++ b/UserService/UserService.Infrastructure/UserService.Infrastructure.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.20" />
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
   </ItemGroup>
 
   <PropertyGroup>
