--- a/UserService/UserService.API/appsettings.json
+++ b/UserService/UserService.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db;Database=tempdb;User=sa;Password=CJnEmigeG!@JLipcRy4&2MNv;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost;Database=tempdb;User=sa;Password=CJnEmigeG!@JLipcRy4&2MNv;TrustServerCertificate=True"
   }
 
 }
