--- a/manifests/application.yaml
+++ b/manifests/application.yaml
@@ -5,7 +5,6 @@ metadata:
   namespace: argocd
 spec:
   project: default
-
   source:
     repoURL: 'https://github.com/Eddie4k-code/QuoteConnect.git'
     targetRevision: HEAD
@@ -13,4 +12,10 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: default
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
     
