--- a/manifests/application.yaml
+++ b/manifests/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: QuoteConnect-argo-application
+  name: QuoteConnect
   namespace: argocd
 spec:
   project: default
